opam-version: "2.0"
name: "opam-ed"
version: "0.3"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
authors: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/AltGr/opam-ed"
bug-reports: "https://github.com/AltGr/opam-ed/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "ocamlfind"
  "cmdliner" {>= "1.0.0"}
  "opam-file-format" {>= "2.1.1"}
]
build: [
  [make "COMP=ocamlc" {!ocaml:native}]
  [make "tests"] {with-test}
]
dev-repo: "git+https://github.com/AltGr/opam-ed.git"
synopsis: "Command-line edition tool for handling the opam file syntax"
description: """
opam-ed can read and write files in the general opam syntax. It provides a small CLI with some useful commands for mechanically extracting or modifying the file contents.

The specification for the syntax itself is available at:
    http://opam.ocaml.org/doc/Manual.html#Common-file-format
"""
