opam-version: "2.0"
version: "0.3"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
authors: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
license: "LGPL-2.1 WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/AltGr/opam-ed"
bug-reports: "https://github.com/AltGr/opam-ed/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "2.0"}
  "cmdliner" {>= "1.0.0"}
  "opam-file-format" {>= "2.0.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/AltGr/opam-ed.git"
synopsis: "Command-line edition tool for handling the opam file syntax"
description: """
opam-ed can read and write files in the general opam syntax. It provides a small CLI with some useful commands for mechanically extracting or modifying the file contents.

The specification for the syntax itself is available at:
    http://opam.ocaml.org/doc/Manual.html#Common-file-format
"""
